--- a/app/src/main/res/layout/content_firebase_users.xml
+++ b/app/src/main/res/layout/content_firebase_users.xml
@@ -11,7 +11,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.aptyr.clonegithubtofirebase.view.users.FirebaseUsersActivity"
+    tools:context="com.aptyr.clonegithubtofirebase.ui.FirebaseUsersActivity"
     tools:showIn="@layout/activity_firebase_users">
 
 </RelativeLayout>
